--- a/helm/artifactory-ha-values.yaml
+++ b/helm/artifactory-ha-values.yaml
@@ -39,14 +39,13 @@ artifactory:
 
 ## Allows to add additional kubernetes resources
 ## Use --- as a separator between multiple resources
-## For an example, refer - https://github.com/jfrog/log-analytics-prometheus
 additionalResources: |
   apiVersion: v1
   kind: Service
   metadata:
     name: {{ template "artifactory-ha.fullname" . }}-metrics
     annotations:
-      prometheus.io/path: "/metrics"
+      prometheus.io/path: "/artifactory/api/v1/metrics"
       prometheus.io/scheme: "http"
       prometheus.io/port: "24231"
       prometheus.io/scrape: "true"
@@ -55,8 +54,8 @@ additionalResources: |
       chart: {{ template "artifactory-ha.chart" . }}
       component: {{ template "artifactory-ha.name" . }}
       heritage: {{ .Release.Service }}
-      release: {{ .Release.Name }}
-      {{- with .Values.artifactory.labels }}
+      release: {{ .Release.Name  }}
+      {{- with .Values.artifactory-ha.labels }}
   {{ toYaml . | indent 4 }}
       {{- end }}
   spec:
@@ -64,6 +63,7 @@ additionalResources: |
     ports:
     - name: metrics
       port: 24231
+      targetPort: 8082
       protocol: TCP
     selector:
       app: {{ template "artifactory-ha.name" . }}
@@ -85,5 +85,60 @@ additionalResources: |
         app: {{ template "artifactory-ha.name" . }}
         component: {{ template "artifactory-ha.name" . }}
     endpoints:
-        - port: metrics
-          interval: 15s
+    - port: metrics
+      scheme: http
+      path: /artifactory/api/v1/metrics
+      interval: 15s
+      bearerTokenSecret:
+        key: token
+        name: jfrog-admin-token
+  ---
+  apiVersion: v1
+  kind: Service
+  metadata:
+    name: {{ .Values.observability.name }}-metrics
+    annotations:
+      prometheus.io/path: "/observability/api/v1/metrics"
+      prometheus.io/scheme: "http"
+      prometheus.io/port: "24232"
+      prometheus.io/scrape: "true"
+    labels:
+      app: {{ .Values.observability.name }}
+      component: {{ .Values.observability.name }}
+      chart: {{ template "artifactory-ha.chart" . }}
+      heritage: {{ .Release.Service }}
+      release: {{ .Values.global.prometheus.release_name }}
+  spec:
+    type: ClusterIP
+    ports:
+    - name: metricsob
+      port: 24232
+      targetPort: 8082
+      protocol: TCP
+    selector:
+      app: {{ template "artifactory-ha.name" . }}
+      component: {{ template "artifactory-ha.name" . }}
+  ---
+  apiVersion: monitoring.coreos.com/v1
+  kind: ServiceMonitor
+  metadata:
+    name: servicemonitor-{{ .Values.observability.name }}
+    labels:
+      metrics: jfrog
+      app: {{ .Values.observability.name }}
+      chart: {{ template "artifactory-ha.chart" . }}
+      heritage: {{ .Release.Service }}
+      release: {{ .Values.global.prometheus.release_name }}
+  spec:
+    selector:
+      matchLabels:
+        app: {{ .Values.observability.name }}
+        component: {{ .Values.observability.name }}
+    endpoints:
+    - port: metricsob
+      scheme: http
+      path: /observability/api/v1/metrics
+      interval: 15s
+      bearerTokenSecret:
+        key: token
+        name: jfrog-admin-token
