--- a/helm/jfrog-platform-values.yaml
+++ b/helm/jfrog-platform-values.yaml
@@ -43,7 +43,7 @@ artifactory:
     metadata:
       name: {{ template "artifactory.fullname" . }}-metrics
       annotations:
-        prometheus.io/path: "/metrics"
+        prometheus.io/path: "/artifactory/api/v1/metrics"
         prometheus.io/scheme: "http"
         prometheus.io/port: "24231"
         prometheus.io/scrape: "true"
@@ -61,6 +61,7 @@ artifactory:
       ports:
       - name: metrics
         port: 24231
+        targetPort: 8082
         protocol: TCP
       selector:
         app: {{ template "artifactory.name" . }}
@@ -82,8 +83,63 @@ artifactory:
           app: {{ template "artifactory.name" . }}
           component: {{ template "artifactory.name" . }}
       endpoints:
-          - port: metrics
-            interval: 15s
+      - port: metrics
+        scheme: http
+        path: /artifactory/api/v1/metrics
+        interval: 15s
+        bearerTokenSecret:
+          key: token
+          name: jfrog-admin-token
+    ---
+    apiVersion: v1
+    kind: Service
+    metadata:
+      name: {{ .Values.observability.name }}-metrics
+      annotations:
+        prometheus.io/path: "/observability/api/v1/metrics"
+        prometheus.io/scheme: "http"
+        prometheus.io/port: "24232"
+        prometheus.io/scrape: "true"
+      labels:
+        app: {{ .Values.observability.name }}
+        component: {{ .Values.observability.name }}
+        chart: {{ template "artifactory.chart" . }}
+        heritage: {{ .Release.Service }}
+        release: {{ .Values.global.prometheus.release_name }}
+    spec:
+      type: ClusterIP
+      ports:
+      - name: metricsob
+        port: 24232
+        targetPort: 8082
+        protocol: TCP
+      selector:
+        app: artifactory
+        component: artifactory
+    ---
+    apiVersion: monitoring.coreos.com/v1
+    kind: ServiceMonitor
+    metadata:
+      name: servicemonitor-{{ .Values.observability.name }}
+      labels:
+        metrics: jfrog
+        app: {{ .Values.observability.name }}
+        chart: {{ template "artifactory.chart" . }}
+        heritage: {{ .Release.Service }}
+        release: {{ .Values.global.prometheus.release_name }}
+    spec:
+      selector:
+        matchLabels:
+          app: {{ .Values.observability.name }}
+          component: {{ .Values.observability.name }}
+      endpoints:
+      - port: metricsob
+        scheme: http
+        path: /observability/api/v1/metrics
+        interval: 15s
+        bearerTokenSecret:
+          key: token
+          name: jfrog-admin-token
 xray:
   enabled: true
   metrics:
@@ -145,7 +201,7 @@ xray:
         protocol: TCP
       selector:
         app: {{ template "xray.name" . }}
-        component: "{{ .Values.xray.name }}"
+        component: {{ template "xray.name" . }}
     ---
     apiVersion: monitoring.coreos.com/v1
     kind: ServiceMonitor
@@ -165,6 +221,59 @@ xray:
       endpoints:
         - port: metrics
           interval: 15s
+    ---
+    apiVersion: v1
+    kind: Service
+    metadata:
+      name: {{ template "xray.fullname" . }}-auth-metrics
+      annotations:
+        prometheus.io/path: "/xray/api/v1/metrics"
+        prometheus.io/scheme: "http"
+        prometheus.io/port: "24231"
+        prometheus.io/scrape: "true"
+      labels:
+        app: {{ template "xray.name" . }}-auth
+        component: {{ template "xray.name" . }}-auth
+        chart: {{ template "xray.chart" . }}
+        heritage: {{ .Release.Service }}
+        release: {{ .Values.global.prometheus.release_name }}
+        {{- with .Values.xray.labels }}
+    {{ toYaml . | indent 4 }}
+        {{- end }}
+    spec:
+      type: ClusterIP
+      ports:
+      - name: metrics
+        port: 24231
+        targetPort: 8082
+        protocol: TCP
+      selector:
+        app: {{ template "xray.name" . }}
+        component: {{ template "xray.name" . }}
+    ---
+    apiVersion: monitoring.coreos.com/v1
+    kind: ServiceMonitor
+    metadata:
+      name: servicemonitor-{{ template "xray.name" . }}-auth
+      labels:
+        metrics: jfrog
+        app: {{ template "xray.name" . }}
+        chart: {{ template "xray.chart" . }}
+        heritage: {{ .Release.Service }}
+        release: {{ .Values.global.prometheus.release_name }}
+    spec:
+      selector:
+        matchLabels:
+          app: {{ template "xray.name" . }}-auth
+          component: {{ template "xray.name" . }}-auth
+      endpoints:
+      - port: metrics
+        scheme: http
+        path: /xray/api/v1/metrics
+        interval: 15s
+        bearerTokenSecret:
+          key: token
+          name: jfrog-admin-token
 insight:
   enabled: false
 distribution:
