Update versions and improve formatting

--- a/helm/xray-values.yaml
+++ b/helm/xray-values.yaml
@@ -12,7 +12,8 @@ xray:
     enabled: true
 replicaCount: 1
 postgresql:
-  postgresqlPassword: xray
+  auth:
+    password: xray
 rabbitmq-ha:
   enabled: false
 rabbitmq:
