--- a/helm/loki-values.yaml
+++ b/helm/loki-values.yaml
@@ -1,11 +1,65 @@
-# This loki-values is only compatible with loki 2.x.
-# For loki 3.x helm values please visit https://grafana.com/docs/loki/latest/setup/install/helm/
-deploymentMode: SingleBinary
 loki:
+  auth_enabled: false
   commonConfig:
     replication_factor: 1
+  schemaConfig:
+    configs:
+      - from: "2024-04-01"
+        store: tsdb
+        object_store: filesystem
+        schema: v13
+        index:
+          prefix: loki_index_
+          period: 24h
   storage:
-    type: 'filesystem'
-  auth_enabled: false
+    type: filesystem
+    filesystem:
+      chunks_directory: /var/loki/chunks
+      rules_directory: /var/loki/rules
+  pattern_ingester:
+      enabled: true
+  limits_config:
+    allow_structured_metadata: false
+    volume_enabled: true
+  ruler:
+    enable_api: true
+
+# Disable minio to use filesystem storage
+minio:
+  enabled: false
+      
+deploymentMode: SingleBinary
+
 singleBinary:
   replicas: 1
+  persistence:
+    enabled: true
+    size: 10Gi
+    # storageClassName: "gp2"  # Uncomment and set your storage class if needed
+
+# Zero out replica counts of other deployment modes
+backend:
+  replicas: 0
+read:
+  replicas: 0
+write:
+  replicas: 0
+
+ingester:
+  replicas: 0
+querier:
+  replicas: 0
+queryFrontend:
+  replicas: 0
+queryScheduler:
+  replicas: 0
+distributor:
+  replicas: 0
+compactor:
+  replicas: 0
+indexGateway:
+  replicas: 0
+bloomCompactor:
+  replicas: 0
+bloomGateway:
+  replicas: 0
