--- a/helm/xray-values.yaml
+++ b/helm/xray-values.yaml
@@ -14,6 +14,21 @@ replicaCount: 1
 postgresql:
   auth:
     password: xray
+
+  ## If Xray DB sync is needed, increase the resources to the following values:
+  # primary:
+  #   resources:
+  #     requests:
+  #       memory: 1Gi
+  #       cpu: 1
+  #     limits:
+  #       memory: 16Gi
+  #       cpu: 3
+  #   extendedConfiguration: |
+  #     max_connections = 500
+  #     listen_addresses = '*'
+  #     max_wal_size = '4GB'
+
 rabbitmq-ha:
   enabled: false
 rabbitmq:
