--- a/helm/xray-values.yaml
+++ b/helm/xray-values.yaml
@@ -64,7 +64,7 @@ common:
         - name: FLUENTD_CONF
           value: ../../../..{{ .Values.xray.persistence.mountPath }}/etc/fluentd/fluentd.conf
         - name: LOKI_URL
-          value: http://loki.{{ .Release.Namespace }}:3100
+          value: http://loki.monitoring.svc.cluster.local:3100
 ## Allows to add additional kubernetes resources
 ## Use --- as a separator between multiple resources
 ## For an example, refer - https://github.com/jfrog/log-analytics-prometheus
