Added missing Loki config and fixed README

--- a/helm/loki-values.yaml
+++ b/helm/loki-values.yaml
@@ -2,6 +2,7 @@ loki:
   auth_enabled: false
   commonConfig:
     replication_factor: 1
+    path_prefix: /var/loki
   schemaConfig:
     configs:
       - from: "2024-04-01"
@@ -13,6 +14,10 @@ loki:
           period: 24h
   storage:
     type: filesystem
+    bucketNames:
+      chunks: chunks
+      ruler: ruler
+      admin: admin
     filesystem:
       chunks_directory: /var/loki/chunks
       rules_directory: /var/loki/rules
@@ -23,6 +28,10 @@ loki:
     volume_enabled: true
   ruler:
     enable_api: true
+    storage:
+      type: local
+      local:
+        directory: /var/loki/rules
 
 # Disable minio to use filesystem storage
 minio:
