--- a/helm/loki-values.yaml
+++ b/helm/loki-values.yaml
@@ -1,37 +1,51 @@
 loki:
-  auth_enabled: false
-  commonConfig:
-    replication_factor: 1
-    path_prefix: /var/loki
-  schemaConfig:
-    configs:
-      - from: "2024-04-01"
-        store: tsdb
-        object_store: filesystem
-        schema: v13
-        index:
-          prefix: loki_index_
-          period: 24h
+  # Storage configuration required by Helm chart templates
   storage:
     type: filesystem
     bucketNames:
       chunks: chunks
       ruler: ruler
       admin: admin
-    filesystem:
-      chunks_directory: /var/loki/chunks
-      rules_directory: /var/loki/rules
-  pattern_ingester:
+  
+  # Use structuredConfig instead of config block for better maintainability
+  structuredConfig:
+    auth_enabled: false
+    common:
+      path_prefix: /var/loki
+      replication_factor: 1
+      storage:
+        filesystem:
+          chunks_directory: /var/loki/chunks
+          rules_directory: /var/loki/rules
+    schema_config:
+      configs:
+        - from: "2024-04-01"
+          store: tsdb
+          object_store: filesystem
+          schema: v13
+          index:
+            prefix: loki_index_
+            period: 24h
+    storage_config:
+      filesystem:
+        directory: /var/loki/chunks
+    pattern_ingester:
       enabled: true
-  limits_config:
-    allow_structured_metadata: false
-    volume_enabled: true
-  ruler:
-    enable_api: true
-    storage:
-      type: local
-      local:
-        directory: /var/loki/rules
+    limits_config:
+      allow_structured_metadata: false
+      volume_enabled: true
+    ruler:
+      enable_api: true
+      storage:
+        type: local
+        local:
+          directory: /var/loki/rules
+    server:
+      http_listen_port: 3100
+      grpc_listen_port: 9095
+    memberlist:
+      join_members:
+        - loki-memberlist
 
 # Disable minio to use filesystem storage
 minio:
